# doc_for

./: .jiu.toml  Cargo.toml  README.md  justfile
.github/workflows/: release.yml
doc_for_derive/: Cargo.toml  README.md
doc_for_derive/src/: attrs.rs  lib.rs
docs/: DEV.md
scripts/: version.sh
src/: lib.rs
tests/: integration_test.rs
