[package]
name = "doc_for"
version = "0.1.2"
edition = "2021"
include = ["/src", "LICENSE", "README.md"]
repository = "https://github.com/PRO-2684/doc_for"
license = "GPL-3.0-or-later"
readme = "README.md"
description = "📖 Get the documentation comment for structs, enums and unions, in a zero-cost fashion."
keywords = ["documentation", "doc-comment", "zero-cost", "proc-macro"]
categories = ["development-tools::procedural-macro-helpers"]

[dependencies]
doc_for_derive = { path = "doc_for_derive", version = "0.1.2" }
