[package]
name = "doc_for_derive"
version = "0.1.1"
edition = "2021"
include = ["/src", "README.md"]
repository = "https://github.com/PRO-2684/doc_for"
license = "GPL-3.0-or-later"
readme = "README.md"
description = "Derive macro for `doc_for` crate."
keywords = ["documentation", "documentation-comment", "zero-cost", "proc-macro"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = "2.0.98"
