[package]
name = "doc_for_derive"
version = "0.2.0"
edition = "2024"
include = ["/src", "README.md"]
repository = "https://github.com/PRO-2684/doc_for"
license = "GPL-3.0-or-later"
readme = "README.md"
description = "Derive macro for `doc_for` crate."
keywords = ["documentation", "doc-comment", "zero-cost", "proc-macro"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.107"
quote = "1.0.47"
syn = "3.0.2"
